--- a/Big Projects.css
+++ b/Big Projects.css
@@ -2,11 +2,15 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+
 * {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
     font-family: font me;
+}
+h4{
+    font-family:'Courier New';
 }
 
 .hed {
@@ -185,7 +189,7 @@ a {
     left: 33%;
 }
 
-.nev h2 {
+.nev h4 {
     color: #efbb20;
 }
 
@@ -276,7 +280,7 @@ a {
     color: #efbb20;
 }
 
-.project2a .div2 h2 {
+.project2a .div2 h4 {
     color: #efbb20;
 }
 
@@ -445,20 +449,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
