--- a/Company.css
+++ b/Company.css
@@ -2,6 +2,9 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+h4{
+    font-family: 'Courier New';
+}
 * {
     padding: 0%;
     margin: 0%;
@@ -129,7 +132,7 @@ a {
     transform: translate(-115%, 70%);
 }
 
-.nev h2 {
+.nev h4 {
     color: #efbb20;
 }
 
@@ -408,7 +411,7 @@ a {
     float: left;
 }
 
-.boxb h2 {
+.boxb h4 {
     color: #efbb20;
 }
 
@@ -582,20 +585,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
