--- a/Project 5 – More Design .css
+++ b/Project 5 – More Design .css
@@ -2,6 +2,12 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+h4{
+    font-family: 'Courier New';
+}
+h4 center{
+    font-family: 'Courier New';
+}
 * {
     padding: 0%;
     margin: 0%;
@@ -124,7 +130,7 @@ a {
     transform: translate(-115%, -0%);
 }
 
-.nev h2 {
+.nev h4 {
     color: #efbb20;
 }
 
@@ -164,7 +170,7 @@ a {
     color: #efbb20;
 }
 
-.project1b .div1 h2 {
+.project1b .div1 h4 {
     color:#efbb20;
 }
 
@@ -199,7 +205,7 @@ a {
     color: #efbb20;
 }
 
-.project2a .div2 h2 {
+.project2a .div2 h4 {
     color: #efbb20;
 }
 
@@ -271,7 +277,7 @@ a {
     color: #efbb20;
 }
 
-.project3b .div3 h2 {
+.project3b .div3 h4 {
     color: #efbb20;
 }
 
@@ -308,7 +314,7 @@ a {
     color: #efbb20;
 }
 
-.project4a .div4 h2 {
+.project4a .div4 h4 {
     color: #efbb20;
 }
 
@@ -449,20 +455,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
