--- a/Project 6 – Living Room Design.css
+++ b/Project 6 – Living Room Design.css
@@ -2,6 +2,12 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+h4{
+    font-family: 'Courier New';
+}
+h4 center{
+    font-family: 'Courier New';
+}
 * {
     padding: 0%;
     margin: 0%;
@@ -125,7 +131,7 @@ a {
     transform: translate(-115%, -0%);
 }
 
-.nev h2 {
+.nev h4 {
     color: #efbb20;
 }
 
@@ -165,7 +171,7 @@ a {
     color: #efbb20;
 }
 
-.project1b .div1 h2 {
+.project1b .div1 h4 {
     color: #efbb20;
 }
 
@@ -200,7 +206,7 @@ a {
     color: #efbb20;
 }
 
-.project2a .div2 h2 {
+.project2a .div2 h4 {
     color:#efbb20;
 }
 
@@ -272,7 +278,7 @@ a {
     color: #efbb20;
 }
 
-.project3b .div3 h2 {
+.project3b .div3 h4 {
     color: #efbb20;
 }
 
@@ -310,7 +316,7 @@ a {
     color: #efbb20;
 }
 
-.project4a .div4 h2 {
+.project4a .div4 h4 {
     color: #efbb20;
 }
 
@@ -451,20 +457,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
