--- a/Service.css
+++ b/Service.css
@@ -2,6 +2,12 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+h4{
+    font-family: 'Courier New';
+}
+h4 center{
+    font-family: 'Courier New';
+}
 * {
     padding: 0%;
     margin: 0%;
@@ -157,7 +163,7 @@ a {
     transform: translate(-40%, -65%);
 }
 
-.nev h2 {
+.nev h4 {
     color:#efbb20;
 }
 
@@ -260,7 +266,7 @@ a {
 }
 
 
-.boxb h2 {
+.boxb h4 {
     color: #efbb20;
 }
 
@@ -377,7 +383,7 @@ a {
 
 
 
-.boxo h2 {
+.boxo h4 {
     color: #efbb20;
 }
 
@@ -471,7 +477,7 @@ a {
     float: left;
 }
 
-.boxu h2 {
+.boxu h4 {
     color: #efbb20;
 }
 
@@ -606,20 +612,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
