--- a/Small Projects.css
+++ b/Small Projects.css
@@ -2,6 +2,12 @@
     font-family: font me;
     src: url(font/sJoA3LZUhMSAPV_u0qwiAQ-O5X8.woff2);
 }
+h4{
+    font-family: 'Courier New';
+}
+h4 center{
+    font-family: 'Courier New';
+}
 * {
     padding: 0%;
     margin: 0%;
@@ -185,7 +191,7 @@ a {
     left: 33%;
 }
 
-.nev h2 {
+.nev h4 {
     color: #efbb20;
 }
 
@@ -217,7 +223,7 @@ a {
     color: #efbb20;
 }
 
-.project2a .div2 h2 {
+.project2a .div2 h4 {
     color: #efbb20;
 }
 
@@ -307,7 +313,7 @@ a {
 }
 
 
-.boxb h2 {
+.boxb h4 {
     color: #efbb20;
 }
 
@@ -447,20 +453,20 @@ a {
 
 .div50 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     text-align: justify;
 }
 
 .div51 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
 
 .div52 {
     overflow: hidden;
-    margin-left: 8%;
+    margin-left: -3%;
     margin-bottom: 5%;
     text-align: justify;
 }
